--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zego-express-engine-webrtc": "^3.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
