--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^8.5.10",
+    "@upstash/redis": "^1.34.6",
     "chess.js": "^1.0.0-beta.8",
+    "dotenv": "^16.4.7",
+    "ioredis": "^5.6.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
