--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,25 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "build": "tsc -b",
-    "dev": "npm run build & npm start"
+    "dev": "npm run build && npm start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@types/ws": "^8.5.10",
-    "@upstash/redis": "^1.34.6",
-    "chess.js": "^1.0.0-beta.8",
-    "dotenv": "^16.4.7",
-    "ioredis": "^5.6.0",
-    "ws": "^8.16.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.7.3"
+    "@types/ws": "^8.18.1",
+    "@upstash/redis": "^1.35.3",
+    "chess.js": "^1.4.0",
+    "mediasoup": "^3.18.0",
+    "ws": "^8.18.3"
   }
 }
