--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,8 @@
     "chess.js": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-chessboard": "^4.7.2",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.10.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
