--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
+    "mediasoup-client": "^3.15.2",
     "react": "^18.3.1",
     "react-chessboard": "^4.7.2",
     "react-dom": "^18.3.1",
