starting from scratch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      - MEDIASOUP_ANNOUNCED_IP=127.0.0.1
     networks: 
     - peerchess
 
